incorporate changes from ir pr, made sorttable local

--- a/api/templates/clients.html
+++ b/api/templates/clients.html
@@ -2,7 +2,9 @@
 {% load my_filters %}
 {% block title %}RustDesk WebUI{% endblock %}
 {% block legend_name %}{{ "Client Downloads" | translate }}{% endblock %}
+{% load static %}
 {% block content %}
+<script src="{% static 'js/sorttable.js' %}"></script>
 <style>
     .container {
     display: grid;
@@ -22,7 +24,6 @@
         border-radius: 5px; /* Add rounded corners for a more 3D effect */
     }
 </style>
-<script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', (event) => {
     // Place your globalSearch function or any DOM-related JS here
