--- a/api/templates/show_conn_log.html
+++ b/api/templates/show_conn_log.html
@@ -2,8 +2,9 @@
 {% load my_filters %}
 {% block title %}RustDesk WebUI{% endblock %}
 {% block legend_name %}{{ "Connection Log" | translate }}{% endblock %}
+{% load static %}
 {% block content %}
-<script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
+<script src="{% static 'js/sorttable.js' %}"></script>
 <div style="padding: 20px; background-color: #F2F2F2;">
   <div class="layui-row layui-col-space15">
     <div class="layui-col-md15">
