--- a/api/templates/show_work.html
+++ b/api/templates/show_work.html
@@ -2,9 +2,10 @@
 {% load my_filters %}
 {% block title %}RustDesk WebUI{% endblock %}
 {% block legend_name %}{{ "Devices" | translate }}{% endblock %}
+{% load static %}
 {% block content %}
+<script src="{% static 'js/sorttable.js' %}"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 <div style="padding: 20px; background-color: #F2F2F2;">
   <div class="layui-row layui-col-space15">
     {% if not show_all %}
@@ -12,7 +13,7 @@
       <input type="text" id="globalSearchInput" onkeyup="globalSearch()" placeholder="Search all fields..." style="width: 200px; height: 20px; margin-bottom: 10px;">
       <div class="layui-card">
         <div class="layui-card-header">{{ online_count_single }}/{{page_obj.paginator.count }}: {{ "User Devices Online" | translate }} - 【{{ "用户名" | translate }}:{{u.username}}】
-          <a href="/api/add_peer"><i class='fa fa-plus'></i> Add Peer</a>
+          <a href="/api/add_peer"><i class='fa fa-plus'></i> Add Client</a>
         </div>
         <div class="layui-card-body">
           <table class="layui-table sortable">
@@ -113,7 +114,7 @@
                 {% if one.rust_user|length > 0 %}
                 <td>{{one.rust_user}} </td>
                 {% else %}
-                <td><a href="/api/add_peer?rid={{one.rid}}"><i class='fa fa-plus'></i> Claim Peer</a></td>
+                <td><a href="/api/assign_peer?rid={{one.rid}}"><i class='fa fa-plus'></i> Assign Peer</a></td>
                 {% endif %}
                 <td>{{one.version}} </td>
                 <td>{{one.username}} </td>
