--- a/api/templates/generator.html
+++ b/api/templates/generator.html
@@ -153,7 +153,7 @@
 </head>
 <body>
     <h1><i class="fas fa-cogs"></i> RustDesk Custom Client Builder</h1>
-    <form id="myForm" action="/generator" method="post" enctype="multipart/form-data">
+    <form id="myForm" action="/api/generator" method="post" enctype="multipart/form-data">
         <div class="save-load-section-container">
             <div class="section">
                 <h2 id="saveLoadTitle">Save/Load Configuration <i class="fas fa-chevron-down"></i></h2>  
