remove github clients

--- a/api/templates/clients.html
+++ b/api/templates/clients.html
@@ -48,7 +48,7 @@
 <input type="text" id="globalSearchInput" onkeyup="globalSearch()" placeholder="Search all fields..." style="width: 200px; height: 20px; margin-bottom: 10px;">
 <a href="/api/generator">Client Generator</a>
 <div class="container">
-    <div class="section">
+    {% comment %} <div class="section">
         <h1>Github Clients</h1>
         <table class="sortable">
             <thead></thead>
@@ -65,7 +65,7 @@
                 {% endfor %}
             </tbody>
         </table>
-    </div>
+    </div> {% endcomment %}
     <div class="section">
         <h1>Custom Clients</h1>
         <table class="sortable">
