status on clients page

--- a/api/templates/clients.html
+++ b/api/templates/clients.html
@@ -8,10 +8,10 @@
 <style>
     .container {
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: repeat(2, auto); /* Adjust the number of rows as needed */
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(1, auto); /* Adjust the number of rows as needed */
     padding: 20px; /* Adjust the padding value as needed */
-    max-width: 1000px; /* Set a maximum width for the container */
+    max-width: 1300px; /* Set a maximum width for the container */
     margin: 0 auto; /* Center the container horizontally */
     }
     .section {
