--- a/api/templates/waiting.html
+++ b/api/templates/waiting.html
@@ -1,21 +1,9 @@
 {% extends phone_or_desktop %}
 {% load my_filters %}
-{% block title %}RustDesk WebUI{% endblock %}
+{% block title %}Generating Client{% endblock %}
 {% block legend_name %}{{ "Client Generator" | translate }}{% endblock %}
 {% block content %}
-<title id="pageTitle">Generating Build</title>
     <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-        }
         .platform-logo {
             width: 150px;
             height: 150px;
