--- a/api/templates/clients.html
+++ b/api/templates/clients.html
@@ -75,6 +75,7 @@
                 <tr>
                     <th>ID</th>
                     <th>Name</th>
+                    <th>Platform</th>
                     <th>uuid</th>
                     <th>Status</th>
                 </tr>
@@ -82,6 +83,7 @@
                 <tr>
                     <td>{{one.id}}</td>
                     <td>{{one.name}}</td>
+                    <td>{{one.platform}}</td>
                     <td>{{one.uuid}}</td>
                     <td>{{one.status}}</td>
                     <td><a href='/api/delete_pending?id={{one.id}}'>Delete</a></td>
